update create booking and quote fee